# near-web4-contract

./: Cargo.toml  README.md  build_docker_m1.sh
contract/res/: account.html  footer.inc  sign-in.html
contract/src/: lib.rs  object.rs  ui.rs  utils.rs  web4.rs
