[package]
name = "contract"
version = "1.0.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
path = "contract/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true